[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
sqlx = { version = "0.7.0", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.1", features = ["cors"] }
utoipa = { features = ["axum_extras"] }
utoipa-swagger-ui = { features = ["axum"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
